--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@ Urodził się, ale nie wie gdzie,
 potrafi pisać i modlić się,
 lecz czemu po bułgarsku
 - jeden Bóg naprawdę tylko wie.</p>
+		<p>Pewnego przedpołudnia gdy
+dostojnie wszedł do restauracji "Dryf",
+Zamówił beczkę piwa, piwo i osiem piw,
+Usiadł, zmarszczył krzaczastą brew.
+W tętnicach mu zaszlochała krew,
+A duszą targnął płaczliwie
+tęskno-rzewny śpiew:
+
+			La, la, la...</p>
 	
 	<p>Pamiętał gór bułgarskich wiatr,
 owieczek stado i ogniska swąd.
